--- a/config.js.example
+++ b/config.js.example
@@ -1,5 +1,5 @@
 module.exports = {
-    token: "ODQ5MTc5NjQ3NDAwODY5ODkw.G2Zm2m.lLq6EoGExWdoVlJw0-wKzSpLgonMyIhF7u_E8g",
+    token: "your_bot_token_here",
     prefix: "!",
     tracker: {
         updateInterval: 10000,  // How often to update (in milliseconds)
