Updated slash command register and added clean up for global commands

--- a/config.js.example
+++ b/config.js.example
@@ -1,5 +1,6 @@
 module.exports = {
     token: "your_bot_token_here",
+    clientId: "your_client_id_here",
     prefix: "!",
     tracker: {
         updateInterval: 10000,  // How often to update (in milliseconds)
