updated brand references

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/Keymasterkid/CrashWatch.git"
   },
   "license": "MIT",
-  "author": "BaseCode™ (keymasterkid)",
+  "author": "OG69 Dev™ (keymasterkid)",
   "type": "commonjs",
   "main": "bot.js",
   "scripts": {
